--- a/segundo/src/Styles.css
+++ b/segundo/src/Styles.css
@@ -20,3 +20,21 @@
     height: 60px;
     margin: 10px;
 }
+
+.main{
+    height: 70vh;
+    padding: 20px;
+}
+
+.footer{
+    height: 10vh;
+    background-color: greenyellow;
+    text-align: center;
+    color: #fff;
+}
+
+.footer a {
+    text-decoration: none;
+    display: block;
+    color: #fff;
+}
