--- a/quarto/src/css/Styles.css
+++ b/quarto/src/css/Styles.css
@@ -44,5 +44,48 @@
 .container .conteudo{
     width: 70vw;
     padding:20px;
-    margin:5px;
+    margin:5px;  
+}
+
+.container .conteudo h2{
+    font-size:20pt;
+    font-weight:lighter;
+    font-family:"Lucida Sans";
+    text-align:center;
+    margin-bottom:40px;
+}
+
+.itens div{
+    width: 30%;
+    height: 200px;
+    padding: 30px;
+    background-color: #ffff;
+    box-shadow: 0px 0px 5px silver;
+    margin: 10px;
+    cursor: pointer;
+    transition: ease 0.5s;
+}
+.itens div:hover{
+    transform: scale(1.1);
+    background-color: #000000;
+    color: #ffffff;
+}
+
+.itens{
+    display:flex;
+    flex-direction: row;
+}
+
+.itens h3{
+    font-family: "Lucida San";
+    font-size: 15pt; 
+}
+
+.itens p{
+    font-family: "Lucida San";
+    font-size: 12pt; 
+}
+
+.itens .preco{
+    color:rgb(236, 49, 49)
 }
